[package]
name = "bit-vec"
version = "0.5.1"
authors = ["Alexis Beingessner <a.beingessner@gmail.com>", "Jonathan Strong <jstrong@legis.io>"]
license = "MIT/Apache-2.0"
description = "A vector of bits"
repository = "https://github.com/jonathanstrong/bit-vec"
homepage = "https://github.com/jonathanstrong/bit-vec"
keywords = ["data-structures", "bitvec", "bitmask", "bitmap", "bit"]
readme = "README.md"

[dev-dependencies]
rand = "0.3.15"

[features]
default = ["nightly"]
nightly = []
